...
 *
 * @param options - Haptic options
 *
 * @example
 * const handleSignOutConfirmation = async () => {
 *   await warningFeedback()
 *   Alert.alert('Sign Out', 'Are you sure?', [...])
 * }
 */
export async function warningFeedback(options?: HapticOptions): Promise<void> {
  await notificationFeedback('warning', options)
}

...
