<resources>
  <string name="app_name">Backtrack</string>
  <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
  <string name="expo_splash_screen_status_bar_translucent" translatable="false">false</string>
  <string name="expo_runtime_version">1.0.0</string>
</resources>