...
        })}
      />
      <MainStack.Screen
        name={SCREENS.Favorites}
        component={FavoritesScreen}
        options={{
          headerTitle: 'Your Favorites',
        }}
      />
      <MainStack.Screen
        name={SCREENS.PostDetail}
        component={PostDetailScreen}
        options={({ navigation }) => ({
...
